# srk-linux

./: .copilotignore  .gitattributes  .gitignore  Makefile  README.md  kernel.code-workspace  srk-linux.code-workspace  srkEncryptedFileSystem.sh
.github/: copilot-instructions.md
05_srk-epoll/: Makefile  epoll_demo.c
06_srk-namespace/: network_namespace_demo.sh
07_srk-dac/: Makefile  dac_example.c
08_srk-squashfs/: 01_create_squashfs.sh  02_mount_squashfs.sh  03_umount_squashfs.sh  readme.md
09_srk_kernel/: readme.md
10_srk-demo-init/: Makefile  print_time.c
11_stack_heap/: analyse.py  heap.txt  hello  hello.c  import os.py  maps.txt  smaps.txt
12_srk-someip/: CMakeLists.txt  someip_client.cpp  someip_server.cpp  vsomeip.json
13_srk-rsa-sign-verify/: README.md  rsa_gen_keys.sh  rsa_sign_verify.sh  test_report.txt  test_rsa_sign_verify.sh
14_srk-capabilities/: srk-capabilites.c
15_srk-kernel-buffer/: sign-module.sh  verify-module.sh
16_srk-signal-handler/: Makefile  signal_handler.c
17_srk-syslog/: Makefile  srk-syslog.c
18_test-rsa/: test_data.sig  test_data.txt
19_systemd-configurator/: .gitignore  README.md  index.html  package.json  script.js  styles.css  systemd-unit-types.md
20_perf-sidechannel/: Makefile  README.md  RESULTS_SUMMARY.md  aes.uml  aes_victim.c  key_extractor.c  perf_capabilities_demo.c  perf_sampling_demo.c  perf_spy.c  simple_aes.h
21_ml-timing-attack/: Makefile  README.md  collect_timing_data.c  ml_key_recovery.py  predict_unknown_key.c  predict_with_model.py  vulnerable_aes.h
srk-capabilities/: Makefile  (+1 more)
(+73 files in other folders)
